edited about section [ommited icons]

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     href="https://fonts.googleapis.com/css2?family=Lato:wght@100;700&family=Montserrat:ital,wght@0,300;1,100&family=Quicksand&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <body>
@@ -39,34 +39,94 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-      <p>Hello, I'm Arifa. I am a high school graduate in Bangladesh. I am mainly interested in Mathematics (Geometry
-        and Combinatorics) and Coding. Besides, I like doing bad <a
-          href="https://www.deviantart.com/kikorbenjene">digital art</a>. I am also on <a
-          href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>!(Learning Japanese, mostly). And
-        <a href="uploads/CV/cv.pdf">here</a> is my CV. </p>
-
-
-      <p>Besides, I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a
-        bronze medal in EGMO 2023. Besides doing math, I like sewing. On the other hand, I hate cooking.</p>
-
-      <p>Later, I became a trainer. I'm blogging in the blog section, and there are some additional resources in the
-        resources section. However, it's important to note that they're just suggestions. Feel free to explore on your
-        own! </p>
-      <br>
-      Contact/Social:
-      <a href="mailto:alamarifa9@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
-      <a href="uploads/CV/cv.pdf"><i class="fa-solid fa-file"></i></a>
-      <a href="https://github.com/meowx-2" target="_blank"><i class="fa-brands fa-github" style="color:#000000"></i></a>
-      <a href="https://linkedin.com/in/meowx" target="_blank"><i class="fa-brands fa-linkedin"
-          style="color:#0077B5"></i></a>
+      <p>
+        Hello! I’m Arifa, currently pursuing a double major in Mathematics and Computer Science at Brac University.
       </p>
-
-
+      <p>
+        I have a strong background in mathematical problem-solving and competitions. I represented Bangladesh at the
+        European Girls’ Mathematical Olympiad (EGMO) from 2021 to 2023, where I earned a Bronze Medal. From 2018 to
+        2023, I was a consistent participant in the Bangladesh Mathematical Olympiad (BDMO), and later contributed as an
+        Academic Team Member for both BDMO and the Bangladesh Girls’ Math Foundation (BGMF).
+      </p>
+      <p>
+        Alongside mathematics, I am passionate about computer science and programming. I was a National Qualifier at the
+        Bangladesh Informatics Olympiad (BDOI) in 2023, and my interests now include frontend development with React and
+        Next.js, Linux systems, and workflow optimization.
+      </p>
+      <p>
+        Outside of academics and coding, I enjoy chess, reading, writing, digital art, and sewing with my grandmother.
+      </p>
+      <p>
+        For a more detailed overview of my academic background, achievements, and experiences, you can connect with me
+        on <a href="https://linkedin.com/in/meowx" target="_blank">LinkedIn</a> or view my <a href="uploads/CV/cv.pdf"
+          target="_balnk">CV</a>, alongside
+        my presence on <a href="mailto:alamarifa9@gmail.com" target="_blank"> Mail</a>, <a
+          href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>,<a
+          href="https://www.chess.com/member/meowx_2" target="_blank"> Chess.com<a>, <a
+              href="https://github.com/meowx-2" target="_blank">Github</a>, <a
+              href="https://open.spotify.com/user/31pftyuhd7fie4pverpmonsvrl64" target="_blank">Spotify</a>, and <a
+              href="https://substack.com/@meowx2?utm_source=user-menu" target="_blank">Substack</a>.
+      </p>
+      </p>
+      <!-- <p>Hello, I'm Arifa. I am a high school graduate in Bangladesh. I am mainly interested in Mathematics (Geometry -->
+      <!--   and Combinatorics) and Coding. Besides, I like doing bad <a -->
+      <!--     href="https://www.deviantart.com/kikorbenjene">digital art</a>. -->
+      <!--   I am also on -->
+      <!--   <a href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>!(Learning Japanese, mostly). -->
+      <!--   And -->
+      <!--   <a href="uploads/CV/cv.pdf" target="_blank">here</a> is my CV. -->
+      <!-- </p> -->
+      <!---->
+      <!---->
+      <!-- <p>Besides, I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a -->
+      <!--   bronze medal in EGMO 2023. Besides doing math, I like sewing. On the other hand, I hate cooking.</p> -->
+      <!---->
+      <!-- <p>Later, I became a trainer. I'm blogging in the blog section, and there are some additional resources in the -->
+      <!--   resources section. However, it's important to note that they're just suggestions. Feel free to explore on your -->
+      <!--   own! </p> -->
+      <!-- <br> -->
+      <!-- Contact/Social: -->
+      <!-- <a href="mailto:alamarifa9@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a> -->
+      <!-- <a href="uploads/CV/cv.pdf"><i class="fa-solid fa-file"></i></a> -->
+      <!-- <a href="https://github.com/meowx-2" target="_blank"><i class="fa-brands fa-github" style="color:#000000"></i></a> -->
+      <!-- <a href="https://linkedin.com/in/meowx" target="_blank"><i class="fa-brands fa-linkedin" -->
+      <!--     style="color:#0077B5"></i></a> -->
+      <!-- </p> -->
+      <!---->
+      <!---->
       </p>
     </div>
   </section>
 
 
 </body>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
+
+</html>
 
 </html>
